update: dsa 35.md

--- a/dsa/contents/35.md
+++ b/dsa/contents/35.md
@@ -149,9 +149,9 @@ void Graph<Tv, Te>:: DFS(int v, int & clock) {
 - 通过这个特点，方便我们判断任意两点之间是否直系的血缘关系
 - 比较活跃期这个方法，只需要一次比较，也就是O(1)的时间，如果按照回溯的方式，显然比较麻烦
 
-**基于DFS解决实际问题的算法**
+### 基于DFS解决实际问题的算法
 
-1 ) Topological Sorting 拓扑排序
+1 ) **Topological Sorting 拓扑排序**
 
 <div align="center">
     <img width="600" src="./screenshot/156.jpg">
@@ -171,7 +171,7 @@ void Graph<Tv, Te>:: DFS(int v, int & clock) {
 - 我们需要写一个算法来判断是否可以，把这些知识体系排成一个序列使得原来的边都是从前指向后这样的目录关系，而不会倒过来发生
 - 如何来做呢？下面我们来说下
 
-2 ) Topological Sorting: In-Degree
+1.1 ) **Topological Sorting: In-Degree**
 
 <div align="center">
     <img width="600" src="./screenshot/157.jpg">
@@ -190,7 +190,7 @@ void Graph<Tv, Te>:: DFS(int v, int & clock) {
 - 所有的课程都会排列到一个倒序的栈中，自底而上，这是一种解决方案，但还不是很高明
 - 如何才能更高明的处理呢? 我们下面来谈
 
-3 ) Topological Sorting: Out Degree + DFS
+1.2 ) **Topological Sorting: Out Degree + DFS**
 
 <div align="center">
     <img width="600" src="./screenshot/158.jpg">
@@ -211,3 +211,127 @@ void Graph<Tv, Te>:: DFS(int v, int & clock) {
 - B->C这条边是FORWARD边, 做了一次标记，随机进行回溯并入栈，这时候还剩下A点，对A继续进行BFS
 - 同理，A标记之后也会随即入栈，我们可以看到最后的这两步，A和B的次序是可以颠倒的，没有关系
 - 从任意一点开始，按照这种算法都可以得到很多种解决方案，Begin With End In Mind 始终记住以终为始的哲学思想
+
+2 ) **BCC: Bi-connectivity/Cut-Vertex 双连通分量**
+
+<div align="center">
+    <img width="600" src="./screenshot/159.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 所谓连通性
+    * 如果一个图中任何两个点之间存在一条路，那么两点是彼此连通的
+    * 如果图中任何两个点都彼此联通的，那么这个图是连通的
+- 所谓Bi-connectivity双联通性，我们首先要了解下Cut-Vertex(切分点)
+    * 上图可以理解为两个区域和一座桥的交通图，可以看到，D和E两点对于整个交通图来说是非常重要的
+    * D和E任意一点缺失都会把一张图变成2张，互相之间不能沟通，所以D和E这种点叫做Cut-Vertex
+    * 如果我们在D和E点做切点，就会把图分成若干块，如上图是分成了3块
+    * 接下来被切分的部分变得更加紧凑了，而且删除被切分部分上的任意一点都不会再造成分离成不连通的子集
+    * 比如删除下面这粉红色区域的任意一点，不失一般性，比如A点，也不会分离整个粉红区域
+    * 而不再存在Cut-Vertex的区域，我们就称为双联通分量(Bi-Connected-Component)，比如：粉红区域，浅蓝区域，浅绿区域
+    * 这里Bi暗示的是双路，它会组成一个环路，一个环有双保险的意思，比如切断了其中一条，从另一条路还可以实现继续连通
+- 现在任务很艰巨，我们希望任意给你一个无向图都可以把其中的Cut-Vertex找出来，包括由其切割的双联通分量
+- 我们可以用DFS来解决这个问题，如何解决呢?
+
+<div align="center">
+    <img width="600" src="./screenshot/160.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 从任何一个点出发，做一个DFS，得到一棵DFS树，树中有很多路径，脉络式的边，不会存在环路
+- 我们先把目光注意在最底层的叶子节点，这些点都不会是Cut-Vertex，必然不会影响整体的连通性
+- 那么DFS树的根节点(不失一般性，我们称之为r点)是不是呢，其实这个取决于当初的选点，由其在图中的地位决定的
+- 主要考虑在做完DFS之后r点的Out Going Degree是几，如果是1度(也就是由r发出的边为1个)
+- 那它不会成为Cut-Vertex，因为它的存在与否对其他点是否连通没有任何影响
+- 如果r点的Out Going Degree是>=2的，不失一般性，我们看2度的情况
+- 这样的话，也就是说r有2个孩子(L、R), 每个孩子都是一棵独立的家族树，如上图(左)所示
+- 这时候r点肯定是Cut-Vertex，显然它会造成L、R两部分分离, 同理2度以上更是如此
+- 由此，我们来判断DFS树的根节点是否为Cut-Vertex只需要判断它的Out Going Degree是1还是大于1
+- 还有一种比较复杂的情况，就是如何判断DFS树中的内部节点是否是Cut-Vertex, 如上图(右)所示
+- 不失一般性，我们取内部节点v，v点到根节点r必然有唯一的一条路径，如深红色的虚线路径
+- 同时，如果，v有两个孩子家族, 这时候，我们就要看这两个家族之间的关系
+- 如果v只有1个孩子，那么v也必然不会成为Cut-Vertex，如上图(右)所示
+- v有两个子家族，比如右边的家族，如果有一点，比如黄色节点，它有一条边能够连接高于v节点的某一点如a点
+- 也就是说v的BACKWARD边能够达到辈分更高的a点，也就是v的祖先，那么这时候v相对于其后代家族来说
+- 不会起到关键的连通作用，这种情况，v删除后，下面的点和上面的点依旧可以连通
+- 这时候，我们再来看v左边的孩子家族, 其中的任意一点，比如黄色节点，它也有一个BACKWARD边
+- 只不过这个BACKWARD边能够连接的祖先辈分没有v点的高，如u点，最高到v点
+- 这时候，v点删除后，以u点为根的家族将会和整体分离，这时候，v点就非常重要且它是一个Cut-Vertex
+- 总结一下，关于内部节点是否是Cut-Vertex，关键看它是否存在一个分支
+- 其分支中任意节点的所有BACKWARD边的另一头的点的辈分，都不会高于v点，这时候我们要用到一个指标hca
+- hca是heighest connected ancestor的缩写，顾名思义，最高连接的祖先
+- hca(v)表示，对任何一点v来说, 它最长的BACKWARD边的所对应的另一头的祖先点，如何找到v的hca呢
+- 很简单，在DFS的过程中，对于任意一点如v点，每发现一条BACKWARD边，都要对它的hca进行更新即可
+- 更好的方式是把hac指标传递给他的父节点，以至再传递, 再传递...因为都是在一条线上的蚂蚱，父因子荣，传递给父节点更合理
+- 那么我们如何来记hac呢，我们知道在DFS中祖先的[dTime, fTime]这个数据范围一定包含所有孩子的
+- 祖先的dTime < 后代的dTime, 我们只需要通过min函数保留最小的dTime, 越小就是辈分越高的祖先
+- 而且在这里，我们并不需要判断fTime, 而且它的存储记录是空闲的，可以把它和hca(v)等效起来
+- 下面我们来看一下算法实现
+
+**算法框架**
+
+```cpp
+#define hac(x) (fTime(x)) // 利用此处闲置的fTime[]充当hca[]
+template <typename Tv, typename Te> // 顶点类型、边类型
+void Graph<Tv, Te>::BCC(int v, int& clock, Stack<int>& S) {
+    hca(v) = dTime(v) = ++clock;
+    status(v) = DISCOVERED; // 发现v点
+    S.push(v); // 顶点v入栈，这个栈记录当下访问过的点
+    // 以下枚举v的所有邻居u
+    for(int u = firstNbr(v); -1 < u; u = nextNbr(v, u)) {
+        switch(status(u)) {
+            // 视u的状态分别处理
+            // 新点发现
+            case UNDISCOVERED:
+                parent(u) = v; // 标记父子关系
+                type(v, u) = TREE; // 拓展树边
+                BCC(u, clock, S); // 从u开始遍历递归做BCC，u会生成一棵DFS树，全部返回后
+                // 若u经后向边指向v的真祖先，O(1)的时间进行比较
+                if(hca(u) < dTime(v)) {
+                    // 这时候u的BACKWARD边的另一端比v的辈分大，v点就不是关键点
+                    hca(v) = min(hca(v), hca(u)); // 则v亦必如此，将hca指标挂载给父节点v
+                } else {
+                    // 否则，以v为关键点(u以下即是一个BCC, 且其中顶点此时正集中于栈S的顶部)
+                    // 当全部pop完成之后, BCC的成员会几乎全被pop出来，这里用几乎，是因为还应该包含u的父节点v
+                    // 也就是说u的这个BCC分量也会连带包括v本身，此时的v是关键点，只要再通过parent(u)添加它即可
+                    // 注意，这里的v并不一定会在S栈中u的下面, 需要用parent(u)来访问v节点
+                    // 弹出当前BCC中(除v外)的所有节点，直到u重新出现在栈顶
+                    while(u != S.pop()); 
+                    // 可视需要做进一步处理 TODO
+                }
+                break;
+            case DISCOVERED:
+                type(v, u) = BACKWARD; // 标记为BACKWARD边
+                // 如果u不是父节点，换句话说而是祖先节点更新hca
+                if(u != parent(v)) {
+                    hac(v) = min(hca(v), dTime(u)); // 更新hca[v], 越小越高
+                }
+                break;
+            default:
+                // VISITED (digraphs only) 这里只是和DFS的算法做对比，可以忽略本分支
+                // 这里的CROSS边实际上是没有意义的
+                type(v,u) = dTime(v) < dTime(u) ? FORWARD : CROSS;
+                break;
+        }
+    }
+    status(v) = VISITED; // 对v的访问结束
+}
+#undef hca
+```
+
+**图解BCC步骤**
+
+<div align="center">
+    <img width="600" src="./screenshot/161.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 这是一个BCC算法的例子，一步一步的执行，最终得到了5个双联通分量
+- 每个节点的数字中上面是dTime,下面是fTime,而且按照之前的说法，把fTime换成了hca指标
+- 在这个过程中，我们引入了一个栈，依次把你每次碰到的点一个个存进去
