update: dsa 35.md

--- a/dsa/contents/35.md
+++ b/dsa/contents/35.md
@@ -334,4 +334,13 @@ void Graph<Tv, Te>::BCC(int v, int& clock, Stack<int>& S) {
 
 - 这是一个BCC算法的例子，一步一步的执行，最终得到了5个双联通分量
 - 每个节点的数字中上面是dTime,下面是fTime,而且按照之前的说法，把fTime换成了hca指标
-- 在这个过程中，我们引入了一个栈，依次把你每次碰到的点一个个存进去
+- 在这个过程中，我们引入了一个栈，依次把你每次碰到的点一个个存进去, 在有些时候
+- 比如在上图(8), H点试图连接C点, C点是H点祖先, C的dTime是5, C把这个值传递给它的父节点D
+- D原来hca的指标是6，现在会更新为5，这时候D要继续回溯，回溯到C点的时候，如上图(9)，然而C也要进行回溯
+- 这时候，C找到了它的父节点F, F会问C, 你经过一通折腾后, 最高能够着谁啊? C回答，我最高只能到5，也就是我自己
+- F点这时候就是一个关键点，它如果被移除，那么它的孩子节点C以及C的后台将会从整个大家族中分离，从连通到不连通
+- 这时候就会发现一个BCC分量：HDC, 而它们正好在栈的顶部，直接pop就可以把它们全部pop出来
+- 其实这时候的BCC分量不仅包括HDC还应该包括F点，我们可以看到F并不在接下来的栈顶，如上图(9)
+- 这时候，通过parent(C)即可找到F，这只需要花费O(1)的时间，但是并不能直接把F分离，作为此时BCC分量的一部分
+- 因为F点还可能是其他BCC分量的关键点，这件事情可以一直等效的做下去, 一个一个地切出BCC分量
+- 到最后用标准的流程完成了所有BCC分量的分解，总计有3个关键点：C、F、K，5个BCC分量，如上图(25)
