update: dsa 35.md

--- a/dsa/contents/35.md
+++ b/dsa/contents/35.md
@@ -101,7 +101,7 @@ void Graph<Tv, Te>:: DFS(int v, int & clock) {
 - 当前活跃的点a试图通过一条有向边去指向死亡状态的点c，这种情况在有向图才会发生
 - 如果不是有向图，而是无向图，每一条边都是对等的，当一开始到达c点的时候，c不会变为蓝色而是会去找无向图中的邻居, 比如a
 - 所以这是一件不可能的事情，在有向图中才会发生这种奇特的现象：活跃指向死亡, 从a->c这种
-- 按照程序中的设定，dTime(a) < dTime(c), 这时候a->c是一条FORWARD的边，在图上标记为粉红色的边
+- 按照程序中的设定，`dTime(a) < dTime(c)`, 这时候a->c是一条FORWARD的边，在图上标记为粉红色的边
 - 如何理解这个FORWARD边，绿色的箭头都是将来构成树的树枝，一旦构成树就会有辈分高低之分
 - c的备份从图上看要比a低2层, 就像是爷爷照顾孙子，我们称之为FORWARD
 - 好的，回到流程中来，标记完a->c为FORWARD边之后，a要继续寻找它的邻居，这里找到了f点
@@ -117,7 +117,7 @@ void Graph<Tv, Te>:: DFS(int v, int & clock) {
 - 而a->b->c并不能构成一个环，因为方向的原因，a->c属于FORWARD边
 - 这个时候，我们可以判断一个图是否是树，以及找出图中所有的环
 - 好的，再次回到流程中来，g会继续寻找它的邻居，找到了c, 这个时候活跃点g试图连接死亡的点c
-- 这个情况之前也碰到过，如a试图连接c, 但不同的是，dTime(g) < dTime(c), 这时候g->c就是一条CROSS边
+- 这个情况之前也碰到过，如a试图连接c, 但不同的是，`dTime(g) < dTime(c)`, 这时候g->c就是一条CROSS边
 - 所谓CROSS边的理解是共同祖先如a点的不同直系分支下的点，g和c不构成直系的血缘关系，可能是叔伯兄弟的关系
 - 也就是跨越两个家族之间的边就是CROSS边，这个算法可以继续跑下去，直到最后
 
@@ -138,9 +138,9 @@ void Graph<Tv, Te>:: DFS(int v, int & clock) {
 - 有的时候是一片森林(多棵树，比如从a点开始)，有的时候是一棵树(比如从d点开始)
 - DFS出来的结果更多的时候出来的是一片森林，我们想从中找出一些不变的性质
 - 其中dTime和fTime这对时间戳有非常显著的意义, 通过它们可以把每个点画成一个更长的一个矩形
-- 如上图右边部分，横向可以表示程序中clock所走的时间轴，如上图1~14
-- 任何一点，比如a，它是1~10这个范围(dTime是1,fTime是10)，在图上表示就是跨越1和10的圆角蓝色矩形，如上图所示
-- 再比如，f是6~9，同理是一个跨越6~9范围的圆角蓝色矩形, 按照这个规则约定，我们画出了上图
+- 如上图右边部分，横向可以表示程序中clock所走的时间轴，如上图1 ~ 14
+- 任何一点，比如a，它是1 ~ 10这个范围(dTime是1,fTime是10)，在图上表示就是跨越1和10的圆角蓝色矩形，如上图所示
+- 再比如，f是6 ~ 9，同理是一个跨越6 ~ 9范围的圆角蓝色矩形, 按照这个规则约定，我们画出了上图
 - 重点说一下上图右上部分的d点，它是从11开始的，所以，它的后代也都会在11以后
 - 我们把蓝色的范围称之为该点的活跃期, 从开始到死亡的周期, 从上图可以看到，任何一个祖先的活跃期一定覆盖它所有的后代节点
 - 比如所a的任意一个后代节点，f点的活跃期一定在a点之内，这个关系是几何图形上的关系，从图中很容易理解
@@ -343,4 +343,4 @@ void Graph<Tv, Te>::BCC(int v, int& clock, Stack<int>& S) {
 - 其实这时候的BCC分量不仅包括HDC还应该包括F点，我们可以看到F并不在接下来的栈顶，如上图(9)
 - 这时候，通过parent(C)即可找到F，这只需要花费O(1)的时间，但是并不能直接把F分离，作为此时BCC分量的一部分
 - 因为F点还可能是其他BCC分量的关键点，这件事情可以一直等效的做下去, 一个一个地切出BCC分量
-- 到最后用标准的流程完成了所有BCC分量的分解，总计有3个关键点：C、F、K，5个BCC分量，如上图(25)
+- 到最后用标准的流程完成了所有BCC分量的分解，总计有3个关键点：C、F、K 以及5个BCC分量，如上图(25)
