--- a/dsa/contents/36.md
+++ b/dsa/contents/36.md
@@ -34,7 +34,7 @@
 - 每个递归实例用方框表示，里面写上数字，数字表示当前计算的项数
 
 <div align="center">
-    <img width="400" src="./screenshot/163.jpg">
+    <img width="600" src="./screenshot/163.jpg">
     <br />
     <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
     <br />
@@ -58,5 +58,49 @@
 - 为此我们要积累一些经验，懂得一些技巧，比如$10^3 \approx 2^{10}$, 对于$\phi$来说，$\phi^5 \approx 10$, 这个比较粗糙
 - 有一个更接近的估算为：$\phi^{36} \approx 2^{25}$, 更好记的方式是：$\phi^{6^2} \approx 2^{5^2}$
 - 我们一般的计算机用的都是GHZ, 其数值大概1s的吞吐量是$10^9 \approx 2^30 \approx \phi^{43}$
-- 所以，我们可以看到为什么上述算法在计算40多项的时候开始变慢了，这是因为这时候计算该项CPU要跑1秒钟，所以人为感觉到延迟
+- 所以，我们可以看到为什么上述算法在计算40多项的时候开始变慢了，这是因为这时候计算该项CPU要跑1秒钟，所以人会感觉到延迟
 - 如何解决这个慢的问题呢，我们就需要用到动态规划
+
+### Fibonacci: Memoization 记忆化
+
+- 通常的递归操作是在一次计算中，会通过一个递归实例唤醒另一个递归实例，接着继续唤醒下一个...最终协同计算出结果
+- 如何避免递归中的重复事情，所谓记忆化就是好记性不如烂笔头，在计算过程中创建一个look-up table查询表
+- 专门用于存储和查询，在Fibonacci这个案例中，可以把查询表设计成一个一维数组
+- 将重复的数据存储在其中，经过一次查询即可知道是否进行复杂的递归操作
+- 比如4这个递归实例, 先不贸然进行分治，因为贸然去做可能会演化出爆炸，所以需要慎重
+- 可以现在这个查询表中查询一下，是否存在4所对应的结果，如果存在则直接返回，不存在，则递归并存储
+- 每计算出一个值就将该值记录，下一次只需要查询就不必进行计算了，进而节省了大量重复的计算
+- 在这个过程中，我们的时间收获会非常大，而只不过多了一张查询表，而这张表的空间并不大, 查询和存储时间也很快
+- 不仅是Fibonacci这个案例，其他的一般递归计算也同样适用，比如下面这个比较简单但低效的算法
+    ```python
+    def f(n)
+        if(n<1) return trivial(n) # 足够小的时候是一个trivial case
+        return f(n-X) + f(n-Y) * f(n-Z); # 递归调用此前计算的各个项，这里不是Fibonacci的二分支了，而是三个，甚至可以是更多
+    ```
+- 通过look-up table进行改进，改进后的算法示例，伪代码实现
+    ```python
+    T M[N] # 初始化一个一维表, T表示基本类型视应用而定，N表示足够的项数
+
+    def f(n)
+        if(n<1) return trivial(n)
+        # 必要时再递归并存储结果
+        # 判断是否存在M[n]
+        if(M[n] == UNDEFINED)
+            M[n] = f(n-X) + f(n-Y) * f(n-Z)
+        return M[n] # 将结果return出去
+    ```
+- 这时候，我们可以通过下图来看下节省后的时间，不失一般性，我们还用Fibonacci的案例
+
+<div align="center">
+    <img width="600" src="./screenshot/164.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 灰色部分是节省下来的递归实例，黄色的实例表示不用递归，直接终止
+- 蓝色部分是真正有效的递归实例，可以看到没有重样的，特别说明一下黄色部分
+    * 一些计算实例不仅可以提前终止，因为上层被提前终止了，所以它们实际上并不存在
+    * 不存在是指不会被生成出来，当然从逻辑上来说是存在的，实际上不会花费任何时间
+- 这样就解决了指数爆炸的问题，所以这是一个非常好的解决方案
+- 动态规划就是这样一种解决指数爆炸的问题
