--- a/dsa/contents/36.md
+++ b/dsa/contents/36.md
@@ -103,4 +103,70 @@
     * 一些计算实例不仅可以提前终止，因为上层被提前终止了，所以它们实际上并不存在
     * 不存在是指不会被生成出来，当然从逻辑上来说是存在的，实际上不会花费任何时间
 - 这样就解决了指数爆炸的问题，所以这是一个非常好的解决方案
-- 动态规划就是这样一种解决指数爆炸的问题
+- 动态规划就是这样一种解决指数爆炸的问题，Memoization是动态规划中的一种基本策略
+
+### Power: $a^{98765}$ 指数计算
+
+- 给一个任意整数来计算它的高阶次方，也就是幂运算，如标题所示，98765次方需要多少时间
+- 一般而言，一个个计算需要98765次，也就是n次方需要O(n)的时间，如何优化呢?
+- 任何十进制的数字都可以分解成若干项，比如：
+    * $a^{98765} = a^{9 \cdot 10^4 + 8 \cdot 10^3 + 7 \cdot 10^2 + 6 \cdot 10^1 + 5 \cdot 10^0}$
+    * $= (a^{10^4})^9 \cdot (a^{10^3})^8 \cdot (a^{10^2})^7 \cdot (a^{10^1})^6 \cdot (a^{10^0})^5$
+- 这里隐藏的奥妙是，有多少位就分解为多少子任务, 98765有5位
+
+<div align="center">
+    <img width="600" src="./screenshot/165.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 任何一个位的计算都会有一个基底base, 我们可知，个十百千万这5位各个位数的基底分别是：$a^1, a^{10}, a^{100}, a^{1000}, a^{10000}$
+- 前后每一位基底的差异是10次方的关系，可以从前一个基底很方便的得到下一个基底，得到每一个基底只需要O(1)的时间
+- 得到基底之后，为了得到每个子任务的解，只需要再花一个O(1)的时间就够了，也就是乘一个倍数
+- 之后再进行各个位数的加法运算，同样是O(1)即可得到最终结果，这样看来，我们并不需要O(98765)的时间了，算法得以大幅优化
+- 一般来说，关于数值计算问题的规模并不是用n来度量的，我们计算$a^n$, 这个问题的规模并不是n
+- 一个问题的规模应该是用于描述这个问题所需空间的量，为了描述计算$a^n$这个问题，只需要log n的空间即可
+- 比如，我们表示1万，不用1万个1来表示，而是通过进制来表示：10000，所以对这个问题来说log 10000=4才是问题的规模
+- 我们一般管这种问题规模叫做r, $r = log n$, 对于我们的指数运算案例来说，从最原始的计算需要: $O(n)=O(2^r)$ 也就是指数算法
+- 现在通过D.P.只需要：$O(2r)=O(r)=O(log n)$, 两者之间的效率是有非常巨大的鸿沟的, 这个才算得上是一个算法
+- 而且，我们10进制的运算并不快，可以把它翻译成2进制，如下是二进制计算的案例
+
+### Power: $a^{10110b}$ 二进制指数计算
+
+- 如果要计算$a^{10110b}$这个二进制指数运算，我们知道
+- $a^{10110b} = a^{1 \cdot 2^4 + 0 \cdot 2^3 + 1 \cdot 2^2 + 1 \cdot 2^1 + 0 \cdot 2^0} = (a^{2^4})^1 \cdot (a^{2^3})^0 \cdot (a^{2^2})^1 \cdot (a^{2^1})^1 \cdot (a^{2^0})^0$
+
+<div align="center">
+    <img width="600" src="./screenshot/166.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 十进制的10次方，在二进制的10次方来说就是平方，所以二进制每平方一次就会得到下一个基底
+- 同时很多运算还可以转化为移位运算，如下
+
+### Power: O(r) = O(log n)
+
+- 二进制可以通过移位来进行更快的运算，如下
+
+```cpp
+int power(int a, int n) {
+    int pow = 1, p = a; // O(1+1)
+    while(o < n) { // O(logn)
+    if(n & 1) // O(1)
+        pow *= p; // O(1)
+        n >> = 1; // O(1)
+        p *= p; // O(1)
+    }
+    return pow; // O(1)
+}
+```
+
+- 指数运算可以在O(logn)也就是位数O(r)的时间里求得结果
+- 有意思的是，回到最开始的Fibonacci案例中，如果熟悉矩阵运算的话，可以写成这么一个矩阵：$A = \begin{bmatrix} 0 & 1 \\ 1 & 1 \end{bmatrix} = \begin{bmatrix} fib(0) & fib(1) \\ fib(1) & fib(2) \end{bmatrix}$
+- 一般来说，这个A不断乘下去，通过数学归纳法，有：$A^n = \begin{bmatrix} fib(n-1) & fib(n) \\ fib(n) & fib(n+1) \end{bmatrix}$
+- 可以看到左下角，右上角，对角线上是Fibonacci数的相邻三项，对角线重复的那两项，就是第n项，左上角是前一项n-1, 右下角是后一项n+1
+- 这说明Fibonacci运算可以转化成矩阵运算，如果这里的A视作刚才的a, 也可以使用上述同样的算法也就是O(r)的时间计算出第n项的Fibonacci数
+- 话说回来，这个通过O(r)的时间来计算Fibonacci数在理论上可行，在实际应用中还需要做一些补救措施，加上之后，速度又会降低一些，这里不再赘述
