update: dsa 36.md

--- a/dsa/contents/36.md
+++ b/dsa/contents/36.md
@@ -170,3 +170,66 @@ int power(int a, int n) {
 - 可以看到左下角，右上角，对角线上是Fibonacci数的相邻三项，对角线重复的那两项，就是第n项，左上角是前一项n-1, 右下角是后一项n+1
 - 这说明Fibonacci运算可以转化成矩阵运算，如果这里的A视作刚才的a, 也可以使用上述同样的算法也就是O(r)的时间计算出第n项的Fibonacci数
 - 话说回来，这个通过O(r)的时间来计算Fibonacci数在理论上可行，在实际应用中还需要做一些补救措施，加上之后，速度又会降低一些，这里不再赘述
+
+### SPU: Shotest Path Upward
+
+<div align="center">
+    <img width="800" src="./screenshot/167.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 上图的问题描述是：在一个由非负整数构成的矩阵中，找出从最底层通往最高层的一条路径使得路径总长(沿途所经整数的总和)最小
+- 我们可以做一个类比，如上图所示，假如你在一家超市结账，结账流程是分门别类去结账，也就是不是像我们生活中的结账
+- 而是根据你所购买的类型来结账，比如上图，加入你购物车中购买了如上图所示的7种类型
+- 你需要按照流水线逐个类别进行结账，而且是从下到上的(比如，结账的入口是最底层，结账的出口是最上层)
+- 每个结账的柜台(格子)由不同的操作员进行结账，而操作员因经验不同，结账的效率不同
+- 每个格子由上下两部分组成，下面浅绿色格子内的数字代表操作员结账的效率，上面浅紫色格子内的数字表示当前效率的累计(可以理解为当前花费的效率总成本计算)
+- 每次结完账之后，只有三种选择(直接向上，右上方，左上方)如图所示, 进而往上进行下一类的结账
+- 也就是说，除了最左右两边的选择只有2种，其他格子都会有三种向上的选择方式
+- 我们希望用最快的速度结完账！换句话说是从底向上找到一条花费最小的路线
+- 注意：由于作图保持简洁性的原因，除了最两边的格子(2种向上方案)，中间的每个格子都可以找到三种方案
+- 当然，这个问题可能会存在一些歧义性
+    * 1 ) 最优路线可能会有多分叉，如上图(中)，可以看到有两个相邻的都是16，其结果一样
+    * 2 ) 最优路线可能会是多条路径，如上图(右)，其最终结果一致
+    * 我们不管这些歧义点，先把问题收敛起来，如何解决最小时间成本的问题
+
+**Recursion vs. DP 递归与动态规划**
+
+<div align="center">
+    <img width="800" src="./screenshot/168.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 我们可以先尝试分而治之，其实它的效率非常的低，如上图下半部分(左)
+- 我们可以把上面格子上下两部分数字分别标记为d和w
+    * d表示从该格子出来需要的时间(delay)
+    * w可以看作是权重weight或等待时间(waiting time)
+- 在这里，这个柜台(格子)是分为一行一行的，用肩膀上的k表示第几行(注意：从下到上的顺序)
+- i表示在这一行中这个格子是第几列，我们如果想要写出一个通用的算法
+- 我们自然而然想到在最上层中m个格子中，找到最小d的格子，它所代表的结账路径就是我们最佳的求解方案
+- 我们把这个问题一般化，我们希望得到这么一个算法，在某一给定第k层的某一i单元格子，它所对应的delay是多少
+- 当然它本身所需要花费的效率，也就是w是固定的(给定的), 如果我们要从该单元格出来，无非在其前一步中的k-1层最多有三种可能
+- 要么从它的正下方进入，要么从它的左下或右下方进入，如图所示，所以第k层该单元的解应该是第k-1层中的三个单元格子的最优者
+- 所以，我们分而治之的思路是，分解为左中右三份，分别记为：L,M,R
+- 我们形式化描述为：$d^k(i) = w^k(i) + min\{ d^{k-1}(i-1), d^{k-1}(i), d^{k-1}(i+1) \}$, 之后交给递归来处理
+- 这种策略虽然可以解决问题，但是和之前的Fibonacci问题一样，也有致命伤，即大量的重复
+    * 抽象来说，在第k行，比如第i个格子，它可以分解为下面一层的三个子任务，也就是一分为三
+    * 现在的问题是它有邻居，不考虑最左和最右两边，一般性而言，在一层中一个格子有左右2个邻居，也就是$d^k(i-1),d^k(i+1)$
+    * 每个邻居同样需要一分为三，分别唤醒它下层的三个格子，可以自己作图看下，这样来说，一般性而言
+    * 第k-1行的一个格子就会被重复3次(不考虑左右两头)，而且这才是2层，如果有更多层，就会发生指数爆炸
+    * 很快，这个策略就会失效，不是一个好算法
+- 那还有什么策略呢，我们知道动态规划中的策略是：凡重复的东西都不要重复的去做
+- 我们用之前Memoization记忆化的方案是行得通的，但我们还想更彻底一些，如上图下半部分(右)
+- 流程我们都知道了，其实我们可以把它颠倒过来，同样是求解$d^k(i)$, 假设我们已经算出它的值
+- 它会对更高层(上层：k+1层)哪些格子的任务有所帮助，不失一般性，不考虑最两边的格子，同样是3个
+- 这时候我们有个很好的条件就是递归基，也就是第1行(按程序上说，我们可以称为第0行，也就是最下层)
+- 我们把这一行每个格子作为一个子任务，它的解是最平凡的，也就是trivial case，它的解直接可以得到
+- 这点很容易理解，这样，我们可以逐层的给上一层的三个格子提供offer, 这样一来，一般性而言
+- 上一层(第二层)上的格子就会收到3个offer(暂不考虑两端格子)，这时候就可以用上面的数学公式取最小值了
+- 其实本质上的计算和之前一样，只是次序颠倒了过来，一旦第二层的格子都得到了最优解，就可以效仿同样的逻辑
+- 继续向着上一层提供offer, 逐层而上到达最上层, 在最上层中找到最小值，就是我们花费的最少时间
+- 所以，我们知道，通过动态规划解决这一问题最好的方式不是Memoization而是逆向思维
