update: dsa 36.md

--- a/dsa/contents/36.md
+++ b/dsa/contents/36.md
@@ -232,4 +232,49 @@ int power(int a, int n) {
 - 上一层(第二层)上的格子就会收到3个offer(暂不考虑两端格子)，这时候就可以用上面的数学公式取最小值了
 - 其实本质上的计算和之前一样，只是次序颠倒了过来，一旦第二层的格子都得到了最优解，就可以效仿同样的逻辑
 - 继续向着上一层提供offer, 逐层而上到达最上层, 在最上层中找到最小值，就是我们花费的最少时间
-- 所以，我们知道，通过动态规划解决这一问题最好的方式不是Memoization而是逆向思维
+- 所以，我们知道，通过动态规划解决这一问题最好的方式不是Memoization而是逆向思维(也就是递推)
+
+### LMP: Longest Manhattan Path 最长曼哈顿路径
+
+<div align="center">
+    <img width="800" src="./screenshot/169.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 这个问题是这样的，你在曼哈顿街区(不失一般性, 比如矩形区域)居住，同样公司也在这里
+- 你家在左上角，公司在右下角，每走过一个格子就会有一个红包可以领取
+- 我们在不耽误上班(不走回头路, 只能向右向下)的情况下找到一条最好的路径让沿途红包总量最大
+- 我们把这个问题叫做最长的曼哈顿道路，这也是一个典型的动态规划的问题，我们来看下这个问题如何解决
+
+**LMP: Recursion vs. DP**
+
+<div align="center">
+    <img width="800" src="./screenshot/170.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 我们把抵达到每个格子得到红包最大数作为一个子任务，用上图(左)来描述
+- 比如第i行，第j列捡到的红包总量定义为：d(i,j), 格子本身的红包用：w(i,j)表示
+- 从这里我们也可以分而治之来看，不失一般性，如果要到达d(i,j)这个格子
+- 只有两种情况：从上边过来和从左边过来，如果要到达d(i,j)最大
+- 只有要么d(i,j-1)最大,要么d(i-1,j)最大，我们只要对比一下两者的大小
+- 即：`d(i,j) = w(i,j) + max{d{i-1,j}, d(i,j-1)}`
+- 这样的话，一般性而言，我们会想到，从公司到你家来计算
+- 每个局部都是向上和向左蔓延，总体来说，通过递归的分而治之，从公司一直到你家里
+- 好在有递归基，最上面一行和最左边一列的解是可以直接得到的
+- 但是，这个过程也同样蕴含很多的风险，也就是大量的重复，指数爆炸
+    * 我们可以把一个任务分解成2个子任务，站在子任务的角度来说，在整个往左上角递归向上的过程中
+    * 每个子任务可能被多次唤醒，可能是它右边格子唤醒，也可能由它下面的格子唤醒
+    * 因为右边格子和下面格子本身都会多次被唤醒，这样迭代起来就会出现指数爆炸
+    * 所以这样，也不是一个好的算法，只能计算较小的数值
+    * 如何解决这个问题呢？
+- 我们同样倒过来思考，也就是直接从你家到公司，也就是递推, 如上图(右)
+    * 刚才是立足于某一个未知问题的求解，降解成两个较小的问题，这会造成指数爆炸
+    * 现在倒过来思考，立足于相对更小的问题，假设它已经解决了(因为有递归基的存在，假设成立)
+    * 通过它给和它相关的一个或多个更大的问题提供一个解决问题的候选方案
+    * 这个候选对于更大问题只需要记下来并不断优化即可，所以这是一个更好的方案
+- 这个方案和上面的SPU案例类似
