update: dsa 36.md

--- a/dsa/contents/36.md
+++ b/dsa/contents/36.md
@@ -24,7 +24,7 @@
     <br />
 </div>
 
-- 斐波那契数的计算公式 $fib() = fib(n-1) + fib(2)$
+- 斐波那契数的一般计算公式：$fib(n) = fib(n-1) + fib(n-2)$
 - 这里的n从0开始，非负数，从2开始，每一项是前两项的和，这个数列其实是呈指数爆炸的
 - 我们可以设计一个算法来表达这个公式 `int fib(n) {return (n<2) ? n : fib(n-1) + fib(n-2);}`
 - 我们可以看到这个公式的数学定义是一种递归的形式，功能上没问题，我们要关心速度
