update: database 2.md

--- a/data-base/contents/2.md
+++ b/data-base/contents/2.md
@@ -7,9 +7,10 @@ Mac下MySQL的配置和修改密码
 - 软件默认会安装到：`/usr/local/mysql` 目录，进入这个目录下的bin目录：$`cd /usr/local/mysql/bin`
 - 执行 $`./mysql -u root -p` 通过初始密码登录MySQL
 - 通过下面两行代码重置密码：
- * $`SET PASSWORD FOR 'root'@'localhost' = PASSWORD('您将要设置的新密码')`
- * $`FLUSH PRIVILEGES;`
-- 执行完成后退出，密码已重置
+	* $`ALTER USER 'root'@'localhost' IDENTIFIED BY '新密码';` 重置新密码
+ 	* $`quit` 退出
+- 执行完成后退出重新登录，密码已重置，这是已知密码情况下的改密
+- 忘记密码的修改此处不再赘述
 
 ### 配置mysql命令
 
