--- a/dsa/contents/37.md
+++ b/dsa/contents/37.md
@@ -87,3 +87,37 @@
 - 从这个意义上来说，我们计算最终的长度是几，就会有几次的减而治之，但是减而治之通常会有歧义，上面也说过
 - 不过通过这种算法，我们都可以将所有可能覆盖，不会遗漏
 
+### 0/1-Knapsack 背包问题
+
+<div align="center">
+    <img width="500" src="./screenshot/175.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 任何一个背包问题的输入都是由两列等长的数字组成，一个是v,一个是w
+- 假设有一个场景，你出门旅行，带个背包，背包有个承受重量限度W，里面可以装很多东西
+- 每一个物件都有一个重量，用w表示，同时这件东西对你的价值用v来表示
+- 问题是，在给定的v和w两个序列，你有一个背包，最优(价值最大化)带走物品的方案是什么？
+- 形式上来说:
+    * $Given \{ v_i > 0 \ | \ 1 \leq i \leq n \}, \{ w_i > 0 \ | \ 1 \leq i \leq n \}$ and W > 0, find a subset K of [1,n] s.t.
+    * $\sum_{k \in K} v_k \ is \ maximized \ while \sum_{k\in K} w_k \leq W$
+- 我们拿到这个问题，可能会立即想到贪心的方法(实际上没法奏效)，举个例子，比如你有4件东西
+
+<div align="center">
+    <img width="500" src="./screenshot/176.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 它们的重量和价值都是一样的，四件的值分别是2，6，5，4，而背包容量是9，如何选择最优方案呢？
+- 贪心无非两种方式：先贪最大的或先贪最小的
+    * 如果先贪最大的，塞进去了6，那么5和4都不能放，只能选择2了
+    * 从而装下的价值是6+2=8 < 9, 但是我们知道这个方法不是最优的
+    * 因为我们明显能看到5+4=9，正好填满背包
+    * 如果从小的开始贪，会碰到同样的甚至更尴尬的问题
+    * 所以贪心策略并不合适
+- 如何解决呢？我们还是回到之前的那张表上去，如上上图
+- 每个格子都会对应一个最大值，
