update: dsa 37.md

--- a/dsa/contents/37.md
+++ b/dsa/contents/37.md
@@ -60,7 +60,7 @@
 - 如下图所示，有两个例子，任选其一即可
 
 <div align="center">
-    <img width="600" src="./screenshot/174.jpg">
+    <img width="700" src="./screenshot/174.jpg">
     <br />
     <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
     <br />
@@ -72,7 +72,7 @@
 - d(i,j)上LCS问题的解，从逻辑上来说就是这样的
 - 如果我们要计算最左下角格子，也即是最终的任务(原始两字符串的LCS)
 - 要考虑三种情况，一种是向上的，一种是向左的，一种是沿对角线方向(右下->左上)的递归
-- 这些可能取决于A[n](A字符串的末字符)和B[m](B字符串的末字符)是否能够匹配
+- 这些可能取决于`A[n]`(A字符串的末字符)和`B[m]`(B字符串的末字符)是否能够匹配
 - 从递归上来说，会有子任务生成出来，会造成可怕的指数爆炸，这是逻辑上可行的
 - 方法我们有了，我们要转过来，求助于递推，因为对于任何两个字符串，我们都会有递归基(递推基)
 - 我们知道第一行都是0，从第二行开始才会有相应的值，我们可以用一种填表的方式来完成矩阵的填写
@@ -115,9 +115,60 @@
 - 它们的重量和价值都是一样的，四件的值分别是2，6，5，4，而背包容量是9，如何选择最优方案呢？
 - 贪心无非两种方式：先贪最大的或先贪最小的
     * 如果先贪最大的，塞进去了6，那么5和4都不能放，只能选择2了
-    * 从而装下的价值是6+2=8 < 9, 但是我们知道这个方法不是最优的
+    * 从而装下的价值是6+2=8<9, 但是我们知道这个方法不是最优的
     * 因为我们明显能看到5+4=9，正好填满背包
-    * 如果从小的开始贪，会碰到同样的甚至更尴尬的问题
+    * 如果从小的开始贪，会碰到同样的甚至更尴尬的问题：2+4=6<9
     * 所以贪心策略并不合适
-- 如何解决呢？我们还是回到之前的那张表上去，如上上图
-- 每个格子都会对应一个最大值，
+- 如何解决呢？我们还是需要一个递归的方法，回到之前的那张表上去，如上上图
+- 每个格子都会在y轴对应一个最大值(该格子对应最上面一行数字中的一个数字)，代表了背包允许的最大值W
+- 以该格子为起点, 在与y方向平行的v和w列中, 在y方向上会有以这个该格子所对应v,w为界的一个(v,w)前缀
+- 这个格子所对应的子任务就是某一个重量的上限W, 在这个意义上来说，如果允许你装的物品不是所有的
+- 而是其中前几项，此时所能得到的最大解(最优解)，就是我们装包的方案
+- 这个方法最开始也是来自于递归，我们要把每个问题作为一个子问题来不断进行递归
+- 如果上图比较抽象，可以将上面的表格简化为下面的矩阵
+
+<div align="center">
+    <img width="700" src="./screenshot/177.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 在这里$v_i, w_i$表示第i项的价值和重量，同理$v_{i-1}, w_{i-1}$是第i-1项的，此两项相邻
+- 如上图所示，第i项中的一个格子表示：允许背包最大值是W，前i项最佳的装包方案是`m[i][W]`
+- 这是一个二维矩阵，用二维数组来表示，下标分别为：W和i($v_i,w_i$)
+- 按照刚才的语义，对于第i项的一个格子，可以分而治之，其实也就是考察它前面的两个问题($m[i-1][W-w_i], m[i-1][W]$)
+- 这两个问题，都是对应于第i-1行的，第i-1行相对于第i行，区别就在于，第i项物品能不能装，答案有两种：选择第i项，不选择第i项
+    * 如果没有考虑第i项，这种方案最优的在第i-1行来说对应的就是第i行正上方的$m[i-1][W]$
+    * 正上方解的特点是它们位于同一列，背包所允许的容量没有变化都是W
+    * 因为没有选择第i项，所以最优的解来自于同样背包容量下的第i-1项所得到的解(这个解暂时还没得到，但通过递归可以得到)
+    * 如果考虑了第i项，那么现在把第i项减除(为了得到第i项的子任务，第i-1项的情况)，对应于只考虑前i-1项的问题
+    * 这个问题对应就在第i-1行，而且它的列要从之前的W移动到W-$w_i$的位置，也就是$m[i-1][W-w_i]$这个格子
+    * 总结来说，这个问题可以根据你在第i项出现之后所做的选择(选或不选)可以递归的分而治之为两个子问题
+    * 这两个子问题如果可以递归得到，我们要做的时候就是在合并的时候把两者的最优解中的更大者保留下来即可
+
+<div align="center">
+    <img width="500" src="./screenshot/178.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 我们可以通过一个例子来说明，如上图，随便找一个格子，比如红框里的160作为第i行的一个最优解
+- 它此时对于的W是21，而它对应物品(比如记该物品代号为p)的v,w分别是39,9
+- 此时这个最终的160取决于两种情况, 选择了物品p，和不选择物品p
+    * 如果选择了该物品p, 那么它的子任务就要从21-9=12，在第i-1行中的12对应的格子是121
+    * 因为用了这个物品，所以这个121+39=160(我们的最大价值)，12+9=21(等于背包最大容量)
+    * 另一种情况是不选择该物品p, 隐藏在160的正上方, 其值是149 < 160, 所以最终选择160，舍弃149
+- 上图中每一个格子都是这样的例子，因为是递归的解法，它会向正上方和左上方减而治之，同样会造成指数爆炸
+- 这时候我们就可以通过D.P.的逆向思维，从第一层算起，比如上图的第一项物品，其v,w是(42,4)，在背包允许容量达到4之前
+- 它能装的东西为0(不能装任何东西), 当到达了4的重量，就可以装下第一项物品了
+- 然后再往后不管W再怎么增大也只能装下这一件物品，因为当前只有这一件物品
+- 有了这个基础的解之后，我们就可以算出第2行, 第3行, ... 
+- 于是通过递推的方法把上表中所有的行每个单元的解一个不落地求出
+- 如果我们指定任意一个W, 可以通过查阅该表中指定的W所对应的最后一行的那个格子就是能用所有物品情况下得到的最优解
+- 这个填表的递推的方法，其实就是我们的动态规划，其实它的缺陷也很明显，时间复杂度太高了
+- 如果我们有n件物品，背包最大限度是W, 那么意味着我们要把这个矩阵填完，其时间复杂度不会低于O(n * W)
+- 在这里我们为了避免麻烦，把W取整处理，即便如此，我们的W是很难控制的，如果它很大，也会爆炸，虽然不是指数爆炸
+- 虽然存在爆炸的可能，但是比之前递归减而治之的指数爆炸好太多了，我们要保证W不要太大
+- 这个背包问题也可能有很多的变种，其基本套路都是基于这个0/1背包问题
