update: dsa 37.md

--- a/dsa/contents/37.md
+++ b/dsa/contents/37.md
@@ -172,3 +172,108 @@
 - 在这里我们为了避免麻烦，把W取整处理，即便如此，我们的W是很难控制的，如果它很大，也会爆炸，虽然不是指数爆炸
 - 虽然存在爆炸的可能，但是比之前递归减而治之的指数爆炸好太多了，我们要保证W不要太大
 - 这个背包问题也可能有很多的变种，其基本套路都是基于这个0/1背包问题
+
+### Transitive Closure: Definition 传递闭包
+
+<div align="center">
+    <img width="600" src="./screenshot/179.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 这是图论中的一个东西，它主要研究有向图，在有向图中，每条边都是有方向的，表示一个点通过一条边到达另一个点
+- 但是到达并不限于直接到达，如果有一个点，经过一条有向边，再经过一条有向边，再经过一条有向边，沿途所经过的任何一点
+- 可以认为它是直接或是间接的抵达，我们把抵达这个概念，不管直接或间接，我们都称作抵达，如果是这样
+- 我们希望在两者之间再引入一条边，如上图红色的边，我们的任务是: 要给每个间接到达的点增加一条红色的边，那怎么做呢？
+- 我们可以把任意一个有向图用一个矩阵来表示，每个单元格子，比如d(i,j)代表第i行和第j列，单元格中存1或0表示是否存在一条边
+- 这个矩阵不是对称的，从i到j有一条边并不代表重j到i也有一条边，否则就是无向图了
+
+<div align="center">
+    <img width="800" src="./screenshot/180.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 如上图所示，每一个步骤都有左右两个矩阵，一开始左边是空的，因为还没有开始
+- 在逐层的计算过程中原来的1都会保留下来，不会变成0，因为它意味着直接可达，接下来随着计算的推进会引入新的为1的单元
+- 也就是0会翻转为1, 1不会翻转为0, 当计算进行到最后的时候，如上图(17)的两个矩阵左边的矩阵是原输入矩阵，右边的矩阵是最终的Closure
+- 在这个Closure中新增的边都是那些红边(代表的是间接可达)，问题是如何计算出这些红边？
+- 如果是间接到达的，如上上图所示，从u到v, 意味着中间可能要经过一些桥梁，假设中间某点k可以作为桥梁
+- 以k为桥梁有哪些u可以间接通往v呢? 在上图的矩阵中，可以简化为上上图(左)的描述，假设u行和v列所对应的单元原来不是1(不能直接到达)
+- 如果有一个k来帮忙，在对角线上(k行，k列)上对应的是上上图X的位置，而帮忙意味着
+    * 一个条件是第u行，第k列是个1(表示u到k可以抵达，不管是直接还是间接)
+    * 另一个条件是在k行v列有个1(表示k到v可以抵达，不管是直接还是间接)
+- 这样通过(u,k)的1，和(k,v)的1，也就是两个绿色的1创建一个红色的1(也就是直连u,v的红边)
+- 从递归的角度来说，如果原来单元格没有1，要考虑是否可以变成1，只需要去看所对应的两个子问题也就是两个绿色格子的1就可以了
+- 这个也是分而治之的递归，可以帮助我们思考计算的逻辑，同样的只能解决小规模问题，稍微大的问题就会变成指数爆炸
+- 所以，我们还是借助动态规划的递推，我们不是站在(u,v)需要哪些k,而是反过来想k可以给哪些u和v提供offer
+- 我们的方式是这样的，我们把k从0号点开始，它作为桥梁能解决哪些点的连接问题，以至1,2,3,...n-1 一直这么下去
+- 当所有点解决的时候，自然这个问题也就解决了
+
+**关键代码实现**
+
+```python
+# k作为一个桥梁为每个点对(u,v)提供offer，k有n个
+for k in range(0, n)
+    # u和v的组合枚举
+    for u in range(0, n)
+        for v in range(0, n)
+            # 这时候我们考虑u,v之间是否连线
+            A[u][v] = A[u][v] || A[u][k] && A[k][v]
+        '''
+        下面的if判断可以忽略，和上面的一个for循环是一个并列的逻辑，算法到上面其实已经够了
+        如果A[u][k]是1，我们还需要把A[u]整个一行完全翻转过来的
+        写下这个if判断会更快，如果算法语言或硬件机制支持一长串的bitwise位运算的话
+        我们现在的硬件条件是64位，一旦矩阵超过64位就要降级为64位处理
+        因为每一行都是1,0字符串，如果是64位之内的，都可以用一个字符表示这个64位的数字
+        64位乘64位的矩阵就可以转换为64个字(一行一个字)，这时候这个内部循环可以和这个if等价起来
+        如果满足条件，可以一下翻转过来一行，从而减少一个内部的for循环
+        一般情况下，还是有所改进的，所以推荐使用下面的if判断来代替一个for循环，不过u,v的双重for循环更容易理解一些
+        '''
+
+        '''
+        if A[u][k]
+            A[u] = A[u] | A[k]
+        '''
+```
+
+**All-Pair Shortest Path 任意两点间最短距离**
+
+- 我们来看由此衍生出来的另一个相似问题，最短路径问题，我们之前的最短路径问题如网兜模型是立足于某个单元的最短路径
+- 如果是一个城市，每个人活动范围任意，我们需要考虑的是任意两点之间的最短距离，这叫做All-Pair Shortest Path
+- 我们基于动态规划给出其中一个算法，这个算法和上面的传递闭包算法很像，传递闭包考虑的问题是u和v之间是否能能够达到
+- 我们这个问题考虑的是u和v之间必然能达到，能达到最短的距离是什么，这时候我们也可以用刚才类似的方法
+- 如果u和v之间能达到，这时候给出一个特定的解了，但是我们想知道最短的达到距离是多少，我们可以通过桥梁k的形式来枚举计算
+
+**关键代码实现**
+
+```python
+for k in range(0, n)
+    for u in range(0, n)
+        for v in range(0, n)
+            A[u][v] = min(A[u][v], A[u][k] + A[k][v])
+```
+
+<div align="center">
+    <img width="600" src="./screenshot/181.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 如上图所示，u和v之间有一个距离红色的uv,这个值可能很大，我们可以考虑以k为桥梁的其他可能通路来优化这个解
+- u要经过k这个桥梁，这样u,k之间有一条通路，距离可以表示为`uk`, 接下来k到v也有一条通路, 距离记为`kv`
+- 如果这两条路存在，必然构成从u经过k到v的一条新的通路，其距离我们可以记为`uk+kv`, 这个距离给u,v提供一条新通路的offer
+- 如果`uk+kv<uv`, 那么就可以取而代之，得到新的最优解(最小距离的路径)
+- 和之前传递闭包算法一样，通过矩阵移动更新所有单元格，有时候某一单元格中的数字会更新取新的最优解，因为其他桥梁可能提供更优的解
+- 当按照动态规划的模式，一个点一个点的作为桥梁完成计算，最后这张表中就会给出最终的解
+- 表中任何一个单元中的数值如果是非无穷的话，就是其连接两点之间的最小距离，而空白的单元，默认都是无穷，也就是不可达的点
+- 其遍历过程同传递闭包非常类似，因为比较麻烦，此处不再图解！
+
+### 总结一下
+
+- 我们要知道为什么我们要研究动态规划：效率提升
+- 动态规划如何从递归模式倒推过来的：逆向思维
+- 从制表，箭头递推等技巧对动态规划的学习非常重要
