add: dsa 50~60.md

--- a/dsa/contents/50.md
+++ b/dsa/contents/50.md
@@ -1,11 +1,11 @@
 ### 题目描述
 
-- 有一排n个格子，现在想用红黄蓝绿四种颜色给格子染色。
+- 有一排n个格子，现在想用红黄蓝绿四种颜色给格子染色
 - 但是，红色和绿色必须染成偶数个，问总共有多少种方案？
 
 ### 输入格式
 
-- 一行一个整数n。
+- 一行一个整数n
 
 ### 输出格式
 
