update: dsa 106.md

--- a/dsa/contents/106.md
+++ b/dsa/contents/106.md
@@ -1,4 +1,4 @@
-### 查找json指定位置的值的算法
+### 查找json指定位置的值的算法实现
 
 给定如下json和指定的位置，求最终的值
 
@@ -10,8 +10,7 @@ const json = {
 
 const path = ['a', 'b', 'c'];
 ```
-
-### 普通算法
+1 ） 普通算法
 
 ```ts
 let result = json;
@@ -22,16 +21,19 @@ path.forEach(k => {
 console.log(result) // 最终结果
 ```
 
-### 使用eval的算法
+- 这一种是使用了链表的指针，树形结构本身的属性就是一种链表结构
+
+2 ） 使用eval的算法
 
 ```ts
 const result = eval(path.join('.'));
 console.log(result); // 最终结果
 ```
 
-eval在严格模式下是被禁止的，所以不推荐使用
+- 这种是原始的方式，eval在以前使用比较广泛，本质还是基于原型链(链表)来访问动态属性
+- eval在严格模式下是被禁止的，所以不推荐使用
 
-### 使用Function的算法
+3 ） 使用Function的算法
 
 ```ts
 const fn = new Function(`return ${path.join('.')}`);
@@ -40,3 +42,4 @@ console.log(result); // 最终结果
 ```
 
 - 使用Function代替eval来讲字符串转变成一个可执行的函数，来高效安全的执行动态代码
+- 本质上也是对原型链(链表)的直接应用
