--- a/dsa/contents/107.md
+++ b/dsa/contents/107.md
@@ -1,6 +1,6 @@
 ### 两个数组的交集
 
-- https://leetcode.cn/problems/path-sum/
+- https://leetcode.cn/problems/intersection-of-two-arrays/description/
 
 ### 描述
 
@@ -90,3 +90,62 @@ function intersection (nums1: number[], nums2: number[]): number[] {
 - 在实际应用中，虽然效率上还行，但是并不推荐上述算法实践，代码冗余
   * 时间复杂度主要在两个sort排序, nlogn + mlogm
   * 空间复杂度也是在两个sort排序，logn + logm
+
+### TS中的集合扩展
+
+1 ）Set操作，使用Set对象：new、add、delete、has、size
+
+```js
+let mySet = new set();
+mySet.add(1);
+mySet.add(5);
+mySet.add(5); // 不会保留多个5，只会保留1个
+mySet.add('ssse');
+let o = {name: 1};
+mySet.add(o);
+mySet.add({name:1}); // 会保留两个对象，它们内存地址是不同的
+
+console.log(mySet.has(1)); // true
+console.log(mySet.has(3)); // false
+console.log(mySet.has(5)); // true
+console.log(mySet.has('ssse')); // true
+console.log(mySet.has(o)); // true
+
+mySet.delete(5);
+```
+
+2 ）迭代Set: 多种迭代方法、Set与Array互转、求交集/差集
+
+```ts
+// 迭代1 for of 迭代
+for(let item of mySet) console.log(item);
+// 迭代2
+for(let item of mySet.keys()) console.log(item);
+// 迭代3
+for(let item of mySet.values()) console.log(item); // 值同key
+// 以上三种迭代, 输出结果一致
+
+// 下面通过entries()方法来调用
+for(let [key, value] of mySet.entries()) console.log(key, value); // 打印key和value果然完全一样
+```
+
+3 ）Set 和 Array互转
+
+```ts
+// Set转Array, 方式1
+const myArr = [...mySet];
+// Set转Array, 方式2
+const myArr = Array.from(mySet);
+// Array转Set
+const mySet2 = new Set([1,2,3,4])
+```
+
+4 ）集合的交集和差集
+
+```ts
+// 求两个Set交集
+const intersection = new Set([...mySet].filter(x => mySet2.has(x)))
+
+// 求两个Set差集
+const difference = new Set([...mySet].filter(x => !mySet2.has(x)))
+```
