add: dsa 108.md

--- a/dsa/contents/107.md
+++ b/dsa/contents/107.md
@@ -114,7 +114,7 @@ console.log(mySet.has(o)); // true
 mySet.delete(5);
 ```
 
-2 ）迭代Set: 多种迭代方法、Set与Array互转、求交集/差集
+2 ）迭代Set
 
 ```ts
 // 迭代1 for of 迭代
@@ -140,7 +140,7 @@ const myArr = Array.from(mySet);
 const mySet2 = new Set([1,2,3,4])
 ```
 
-4 ）集合的交集和差集
+4 ）Set的交集和差集
 
 ```ts
 // 求两个Set交集
