update: dsa 107.md

--- a/dsa/contents/107.md
+++ b/dsa/contents/107.md
@@ -91,6 +91,10 @@ function intersection (nums1: number[], nums2: number[]): number[] {
   * 时间复杂度主要在两个sort排序, nlogn + mlogm
   * 空间复杂度也是在两个sort排序，logn + logm
 
+5 ） 使用字典
+
+- https://blog.csdn.net/Tyro_java/article/details/133320052
+
 ### TS中的集合扩展
 
 1 ）Set操作，使用Set对象：new、add、delete、has、size
