--- a/dsa/contents/110.md
+++ b/dsa/contents/110.md
@@ -38,6 +38,55 @@
 
 ### 算法实现
 
-```ts
+1 ）双指针滑动窗口遍历
 
+```ts
+function lengthOfLongestSubstring(s: string): number {
+    let l = 0;
+    let res = 0;
+    // 用于标记重复字符的字典结构
+    let map = new Map();
+    for(let r = 0; r < s.length; r++) {
+        if(map.has(s[r]) && map.get(s[r]) >= l) {
+            // 字典中存在
+            l = map.get(s[r]) + 1;
+        }
+        res = Math.max(res, r - l + 1);
+        map.set(s[r], r); // 字典更新最新的右指针
+    }
+    return res;
+};
 ```
+
+- 先找出所有不包含重复字符的子串，找出长度最大那个子串，返回其长度即可
+- 用双指针维护一个滑动窗口，用来剪切子串
+- 不断移动右指针，遇到重复字符，就把左指针移动到重复字符的下一位
+- 在输入："abcabcbb"
+- 即左指针指向a(下标为0), 右指针指向c的时候，再移动一位, 右指针指向a(下标为3)的时候
+- 左指针移动一位到b(下标为1)
+- 移动过程中，记录所有窗口的长度，并返回最大值
+
+2 ）暴力遍历
+
+```ts
+function lengthOfLongestSubstring(s: string): number {
+  const len = s.length;
+  let max = 0;
+
+  for (let i = 0; i < len; i++) {
+    let set = new Set();
+    let maxLen = 0;
+    let j = i;
+    while (j < len && !set.has(s[j])) {
+      set.add(s[j]);
+      maxLen++;
+      j++;
+    }
+    max = Math.max(max, maxLen);
+  }
+  return max;
+}
+```
+
+- 使用set集合来确定字符串的连续型，并暴力枚举各种符合情况
+- 这种算法不推荐
