update: dsa 117.md

--- a/dsa/contents/116.md
+++ b/dsa/contents/116.md
@@ -113,9 +113,9 @@ class MaxHeap {
   // 构建最大堆的过程，递归
   static maxHeapify (Arr, i, size) {
     // 左节点（索引）
-    let l = (i << 1) + 1
+    const l = (i << 1) + 1;
     // 右节点
-    let r = (i << 1) + 2
+    const r = (i << 1) + 2;
     let largest = i;
     // 父节点i和左节点l做比较取最大
     if (l <= size && Arr[l] < Arr[largest]) largest = l;
