dsa: update 118.md

--- a/dsa/contents/110.md
+++ b/dsa/contents/110.md
@@ -29,7 +29,7 @@
 输出: 3
 解释: 因为无重复字符的最长子串是 "wke"，所以其长度为 3。
      请注意，你的答案必须是 子串 的长度，"pwke" 是一个子序列，不是子串。
-``` 
+```
 
 ### 提示
 
@@ -45,7 +45,7 @@ function lengthOfLongestSubstring(s: string): number {
     let l = 0;
     let res = 0;
     // 用于标记重复字符的字典结构
-    let map = new Map();
+    const map = new Map();
     for(let r = 0; r < s.length; r++) {
         if(map.has(s[r]) && map.get(s[r]) >= l) {
             // 字典中存在
@@ -74,7 +74,7 @@ function lengthOfLongestSubstring(s: string): number {
   let max = 0;
 
   for (let i = 0; i < len; i++) {
-    let set = new Set();
+    const set = new Set();
     let maxLen = 0;
     let j = i;
     while (j < len && !set.has(s[j])) {
