--- a/dsa/contents/111.md
+++ b/dsa/contents/111.md
@@ -53,7 +53,7 @@ function minWindow(s: string, t: string): string {
     let l = 0;
     let r = 0;
     // 维护一个字典，表示子串需要的字符(键)以及长度(值)
-    let m = new Map();
+    const m = new Map();
     // 遍历模板字符串t 用字典存储
     for(let c of t) {
         // 这样遍历，可以包含模板字符串t中存在重复的字符
@@ -77,7 +77,7 @@ function minWindow(s: string, t: string): string {
         }
         // 此处监听mSize是否全部用完
         while(!mSize) {
-            let newRes = s.substring(l, r + 1);
+            const newRes = s.substring(l, r + 1);
             if(!res || newRes.length < res.length) {
                 res = newRes;
             }
@@ -106,3 +106,4 @@ function minWindow(s: string, t: string): string {
     * n是s的长度，两个while嵌套也是O(n), 就是移动两个指针
 - 空间复杂度：O(m)
     * m是t里不同字符的个数
+- 这个题目难度级别为：困难
