--- a/dsa/contents/112.md
+++ b/dsa/contents/112.md
@@ -1,6 +1,5 @@
 ### 堆
 
-
 - 堆是一种特殊的完全二叉树
     * 完全二叉树：每层节点都完全填满；最后一层，如果不是满的，则缺少右边的若干节点
 
@@ -23,7 +22,7 @@
     /   \
    3     2
   / \    /
-  4   6 5
+  4  6  5
   ```
 
 - 堆的规律
@@ -88,12 +87,9 @@
 - 获取堆顶：返回数组的头部
 - 获取堆的大小：返回数组的长度
 
-```js
-// MinHeap.js
+```ts
 class MinHeap {
-    constructor() {
-        this.heap = []
-    }
+	heap: number[] = []
     // 获取父节点
     getParentIndex(i) {
         // return Math.floor(i - 1) / 2; // 这样做代码比较多
@@ -135,9 +131,7 @@ class MinHeap {
     // 上移操作封装 是个递归
     shiftUp(i) {
         // 如果到了堆顶元素，index是0，则不要再上移了
-        if(!i) {
-            return;
-        }
+        if(!i) return;
         // 获得父节点下标: pi
         const pi = this.getParentIndex(i);
         // 开始做比较
@@ -151,19 +145,18 @@ class MinHeap {
     // 下移操作
     shiftDown(i) {
         // 如果到了堆尾元素，则不要再下移了
-        if(i >= this.heap.length - 1) {
-            return;
-        }
-        let li = this.getLeftIndex(i); // 左孩子索引
-        let ri = this.getRightIndex(i); // 右孩子索引
-        let cur = this.heap[i]; // 堆的当前元素
+        if(i >= this.heap.length - 1) return;
+        const size = this.size(); // 获取当前堆长度
+        const li = this.getLeftIndex(i); // 左孩子索引
+        const ri = this.getRightIndex(i); // 右孩子索引
+        const cur = this.heap[i]; // 堆的当前元素
         // 左孩子节点的值 < 当前节点的值
-        if(this.heap[li] < cur) {
+        if(li < size && this.heap[li] < cur) {
              this.swap(li, i);
              this.shiftDown(li);
         }
         // 同样，对右孩子节点的值 < 当前节点的值
-        if(this.heap[ri] < cur) {
+        if(ri < size && this.heap[ri] < cur) {
              this.swap(ri, i);
              this.shiftDown(ri);
         }
@@ -182,7 +175,7 @@ class MinHeap {
         this.shiftDown(0);
     }
     // 获取堆顶
-    peek() {
+    peak() {
         return this.heap[0];
     }
     // 获取堆大小
@@ -204,6 +197,6 @@ h.insert(1);
 h.print(); // [1,3,2]
 h.pop();
 h.print(); // [2,3]
-h.print(h.peek()) // 2
+h.print(h.peak()) // 2
 h.print(h.size()) // 2
 ```
