--- a/dsa/contents/114.md
+++ b/dsa/contents/114.md
@@ -38,8 +38,8 @@
 class MinHeap {
     heap: Record<string, any>[] = [];
     // 交换节点位置
-    swap(i1, i2) {
-        [this.heap[i1], this.heap[i2]] = [this.heap[i2], this.heap[i1]];
+    swap(i, j) {
+        [this.heap[i], this.heap[j]] = [this.heap[j], this.heap[i]];
     }
     // 获得父节点
     getParentIndex(i) {
@@ -56,10 +56,8 @@ class MinHeap {
     // 向上移动
     shiftUp(index) {
         // 如果到了堆顶元素，index是0，则不要再上移了
-        if(!index) {
-            return;
-        }
-        let parentIndex = this.getParentIndex(index)
+        if(!index) return;
+        const parentIndex = this.getParentIndex(index)
         if(this.heap[parentIndex]?.value > this.heap[index].value) {
             this.swap(parentIndex, index)
             this.shiftUp(parentIndex)
@@ -68,9 +66,7 @@ class MinHeap {
     // 下移
     shiftDown(index) {
         // 边界1：如果到了堆尾元素，则不要再下移了
-        if(index >= this.heap.length - 1) {
-            return;
-        }
+        if(index >= this.heap.length - 1) return;
         const size = this.size();
         const leftIndex = this.getLeftIndex(index);
         const rightIndex = this.getRightIndex(index);
@@ -107,7 +103,7 @@ class MinHeap {
 }
 
 function topKFrequent(nums: number[], k: number): number[] {
-    let map = new Map();
+    const map = new Map();
     nums.forEach(n => {
         map.set(n, map.has(n)? map.get(n) + 1 : 1);
     })
@@ -128,7 +124,7 @@ function topKFrequent(nums: number[], k: number): number[] {
 
 ```ts
 function topKFrequent(nums: number[], k: number): number[] {
-    let map = new Map();
+    const map = new Map();
     nums.forEach(n => {
         map.set(n, map.has(n)? map.get(n) + 1 : 1);
     })
