--- a/dsa/contents/115.md
+++ b/dsa/contents/115.md
@@ -1,4 +1,4 @@
-### 合并 K 个升序链表
+### 合并K个升序链表
 
 - https://leetcode.cn/problems/merge-k-sorted-lists/
 
@@ -65,8 +65,9 @@
 class MinHeap {
     heap: Array<ListNode | null> = [];
     // 交换节点位置
-    swap(i1, i2) {
-        [this.heap[i1], this.heap[i2]] = [this.heap[i2], this.heap[i1]];
+    swap(i, j) {
+    	if (i === j) return;
+        [this.heap[i], this.heap[j]] = [this.heap[j], this.heap[i]];
     }
     // 获得父节点
     getParentIndex(i) {
@@ -98,9 +99,9 @@ class MinHeap {
     shiftDown(i) {
         // 如果到了堆尾元素，则不要再下移了
         if(i >= this.heap.length - 1) return;
-        let li = this.getLeftIndex(i); // 左孩子索引
-        let ri = this.getRightIndex(i); // 右孩子索引
-        // 左孩子节点的值 < 当前节点的值
+        const li = this.getLeftIndex(i); // 左孩子索引
+        const ri = this.getRightIndex(i); // 右孩子索引
+        // 左孩子节点的值 < 当前节点的值 注意：左右对比中，this.heap[i]不能用变量替代，因为内部有swap和shiftDown，使用变量会导致bug
         if(this.heap[li]?.val < this.heap[i].val) {
                 this.swap(li, i);
                 this.shiftDown(li);
@@ -119,7 +120,7 @@ class MinHeap {
     // 删除堆顶
     pop() {
         if(this.size() === 1) return this.heap.shift();
-        let top = this.heap[0];
+        const top = this.heap[0];
         // 变相删除堆顶, 堆尾元素移动到堆顶
         this.heap[0] = this.heap.pop(); // 删除数组的最后一个元素并返回，返回值赋值给堆顶元素
         // 执行堆顶下移操作，维持堆的有序性
@@ -137,7 +138,7 @@ class MinHeap {
 }
 
 function mergeKLists(lists: Array<ListNode | null>): ListNode | null {
-    let res = new ListNode(0);
+    const res = new ListNode(0);
     let p = res;
     const h = new MinHeap();
     // 通过输入来构建堆结构
@@ -149,7 +150,7 @@ function mergeKLists(lists: Array<ListNode | null>): ListNode | null {
     // 谁出队，就把谁的下一个入堆，逐个比较
     // 最终堆空了，比较全部结束
     while(h.size()) {
-        let n = h.pop(); // 弹出堆顶元素，最小值
+        const n = h.pop(); // 弹出堆顶元素，最小值
         p.next = n; // 将堆顶元素挂载在新链表上
         p = p.next; // 链表指针移位，为下次连接做准备
         n.next && h.insert(n.next) // 将弹出的堆顶元素的下一个元素入堆，进行重新构建堆结构
