--- a/dsa/contents/117.md
+++ b/dsa/contents/117.md
@@ -63,7 +63,7 @@ function frequencySort(s: string): string {
 ```
 
 - 这里使用平时最简单的原生排序法，结合Map数据结构的特性，和ES6中字符串的特性完成
-- 原生排序，性能不错，推荐
+- 原生排序，性能不错 O(nlogn)，推荐
 
 2 ）使用堆排序
 
@@ -80,8 +80,8 @@ class MaxHeap {
     this.heap = Array.from(map.values());
   }
   sort () {
-    let iArr = this.heap;
-    let n = iArr.length;
+    const iArr = this.heap;
+    const n = iArr.length;
     if (n <= 1) return iArr;
     for (let i = Math.floor(n / 2); i >= 0; i--) {
       MaxHeap.maxHeapify(iArr, i, n);
@@ -98,7 +98,7 @@ class MaxHeap {
     const str = [];
     while (arr.length) {
       const top = arr.pop();
-      for (let [k, v] of this.map) {
+      for (const [k, v] of this.map) {
         // 值和值匹配
         if (v === top) {
           str.push(k.repeat(v));
@@ -142,6 +142,6 @@ function frequencySort(s: string): string {
 - 如果这个堆之前构建好，只需要少许修改，即可投入使用
 - 理解了最大堆的构建过程，这个还是比较推荐使用的
 - 需要注意的是在while和for的嵌套循环中的时间复杂度的考量
-  * while是每次pop直到为0，因此是 n
-  * for不会每次都执行n次，匹配到会被break掉，因此是 logn
+  * while是每次pop从n直到为0，因此是 n
+  * for不会每次都执行n次，匹配到时会被break掉，因此是 logn
   * 所以整体时间复杂度为 O(nlogn)
