--- a/dsa/contents/113.md
+++ b/dsa/contents/113.md
@@ -46,8 +46,8 @@ const findKthLargest = function(nums, k) {
 class MinHeap {
     heap: number[] = [];
     // 交换节点位置
-    swap(i1, i2) {
-        [this.heap[i1], this.heap[i2]] = [this.heap[i2], this.heap[i1]];
+    swap(i, j) {
+        [this.heap[i], this.heap[j]] = [this.heap[j], this.heap[i]];
     }
     // 获得父节点
     getParentIndex(i) {
@@ -64,22 +64,17 @@ class MinHeap {
     // 向上移动
     shiftUp(index) {
         // 如果到了堆顶元素，index是0，则不要再上移了
-        if(!index) {
-            return;
-        }
-        let parentIndex = this.getParentIndex(index)
+        if(!index) return;
+        const parentIndex = this.getParentIndex(index)
         if(this.heap[parentIndex] > this.heap[index]) {
             this.swap(parentIndex, index)
             this.shiftUp(parentIndex)
         }
     }
-
     // 下移
     shiftDown(index) {
         // 边界1：如果到了堆尾元素，则不要再下移了
-        if(index >= this.heap.length - 1) {
-            return;
-        }
+        if(index >= this.heap.length - 1) return;
         const size = this.size();
         const leftIndex = this.getLeftIndex(index);
         const rightIndex = this.getRightIndex(index);
