--- a/dsa/contents/116.md
+++ b/dsa/contents/116.md
@@ -1,9 +1,9 @@
-### 实现一个最大堆类及两种排序
+### 实现最大堆类的两种方式及两种不同的排序
 
 1 ）方案一：参考最小堆类实现最大堆类及实现排序
 
 ```ts
-class MinHeap {
+class MaxHeap {
     heap: number[] = [];
     // 交换节点位置
     swap(i, j) {
@@ -24,30 +24,25 @@ class MinHeap {
     // 向上移动
     shiftUp(index) {
         // 如果到了堆顶元素，index是0，则不要再上移了
-        if(!index) {
-            return;
-        }
-        let parentIndex = this.getParentIndex(index)
-        if(this.heap[parentIndex] > this.heap[index]) {
+        if(!index) return;
+        const parentIndex = this.getParentIndex(index)
+        if(this.heap[parentIndex] < this.heap[index]) {
             this.swap(parentIndex, index)
             this.shiftUp(parentIndex)
         }
     }
-
     // 下移
     shiftDown(index) {
         // 边界1：如果到了堆尾元素，则不要再下移了
-        if(index >= this.heap.length - 1) {
-            return;
-        }
+        if(index >= this.heap.length - 1) return;
         const size = this.size();
         const leftIndex = this.getLeftIndex(index);
         const rightIndex = this.getRightIndex(index);
-        if (leftIndex < size && this.heap[leftIndex] < this.heap[index]) {
+        if (leftIndex < size && this.heap[leftIndex] > this.heap[index]) {
             this.swap(leftIndex, index);
             this.shiftDown(leftIndex);
         }
-        if (rightIndex < size && this.heap[rightIndex] < this.heap[index]) {
+        if (rightIndex < size && this.heap[rightIndex] > this.heap[index]) {
             this.swap(rightIndex, index);
             this.shiftDown(rightIndex);
         }
@@ -91,12 +86,12 @@ class MinHeap {
     }
 }
 
-const h = new MinHeap();
-h.sort([1, 10, 9, 5, 3, 11, 3, 9, 11, 13, 1, -1, 98]);
-console.log(h.heap); // [-1, 1, 1, 3, 3, 5, 9, 9, 10, 11, 11, 13, 98]
+const mh = new MaxHeap();
+mh.sort([1, 10, 9, 5, 3, 11, 3, 9, 11, 13, 1, -1, 98]);
+console.log(mh.heap); // [98, 13, 11, 11, 10, 9, 9, 5, 3, 3, 1, 1, -1]
 ```
 
-- 实现最小堆类参考：https://blog.csdn.net/Tyro_java/article/details/133468244
+- 实现最小堆类参考：[https://blog.csdn.net/Tyro_java/article/details/133468244](https://blog.csdn.net/Tyro_java/article/details/133468244)
 - 这里排序需要注意的是：先构建的最小堆，并不是排好序的，只是最小值在堆顶，O(logn)
 - 循环中每次把最小值取出来, 注意pop下移操作时的边界问题，O(nlogn)
 
@@ -113,9 +108,9 @@ class MaxHeap {
   // 构建最大堆的过程，递归
   static maxHeapify (Arr, i, size) {
     // 左节点（索引）
-    const l = (i << 1) + 1;
+    const l = (i << 1) + 1
     // 右节点
-    const r = (i << 1) + 2;
+    const r = (i << 1) + 2
     let largest = i;
     // 父节点i和左节点l做比较取最大
     if (l <= size && Arr[l] < Arr[largest]) largest = l;
@@ -127,8 +122,8 @@ class MaxHeap {
     }
   }
   sort () {
-    let iArr = this.heap;
-    let n = iArr.length;
+    const iArr = this.heap;
+    const n = iArr.length;
     if (n <= 1) return iArr;
     // 这里，从最后一个父节点开始构建最大堆, 因为最后一个父节点到第一个父节点就是一次完整的构建最大堆的过程，完成后堆顶就是最大值
     for (let i = Math.floor(n / 2); i >= 0; i--) {
