dsa: update 118.md

--- a/dsa/contents/118.md
+++ b/dsa/contents/118.md
@@ -114,11 +114,132 @@ function nthSuperUglyNumber(n: number, primes: number[]): number {
   * 目前在 第 77 个 case 的时候, 提示：超出时间限制
   * 我们需要提升查找效率
 
-2 ）使用堆结构来提升查找性能，优化存储空间，优化版
-
-TODO
+2 ）使用堆结构来提升查找性能，优化版
 
 ```ts
+class Ugly {
+  n: number = 0;
+  primes: MaxHeap;
+  constructor (n: number, primes: number[]) {
+    this.n = n;
+    this.primes = new MaxHeap(primes);
+  }
+  // 获取第n个超级丑数，本质是一个查询操作
+  getNthUg() {
+    const res = [1];
+    let i = 2; // 从2开始找
+    const { primes, n } = this;
+    while (res.length < n) {
+      const arr = Ugly.getPrimes(i); // 获取当前i的所有质因数列表
+      const l = arr.length; // 质因数列表长度的
+      let j = 0; // 指针往上数
+      // 遍历当前i的所有质因数找到和primes列表中匹配的质因数, 有一个不匹配都算失败
+      for (; j < l; j++) {
+        // 匹配不到则退出
+        if (!primes.find(arr[j])) break;
+      }
+      // 这时候上面的for循环遍历完成, 而且当前i的所有质因数都匹配成功, 就可以进行下一步的操作
+      if (j === l) {
+        (l === 0) && primes.find(i) && res.push(i); // 当前没有质因数(上面for不会执行)，但是当前的i在给定列表中，存储i(满足超级丑数)
+        (l !== 0) && res.push(i); // 当前i存在质因数列表时，存储 i(满足超级丑数)
+      }
+      i++; // i 递增
+    }
+    return res[n - 1]; // 获取第n个
+  }
+  // 计算指定正整数n的质因数
+  static getPrimes (n) {
+    const prime = (n) => {
+      const arr = []; // 存储所有的质因数
+      for (let i = 2; i <= n / 2; i++) {
+        if (n % i === 0 && !prime(i).length) arr.push(i); // 这里有一个递归找质因数
+      }
+      return arr;
+    }
+    return prime(n);
+  }
+}
 
+class MaxHeap {
+  heap: number[] = [];
+  max: number = 0;
+  constructor (arr) {
+    this.heap = arr;
+    this.max = arr.length;
+    this.sort();
+  }
+  sort () {
+    const iArr = this.heap;
+    const n = iArr.length;
+    if (n <= 1) return iArr;
+    for (let i = Math.floor(n / 2); i >= 0; i--) {
+      MaxHeap.maxHeapify(iArr, i, n);
+    }
+    return iArr;
+  }
+  // 交换两个元素
+  static swap (arr, i, j) {
+    if (i === j) return;
+    [arr[i], arr[j]] = [arr[j], arr[i]];
+  }
+  // 构建最大堆的过程
+  static maxHeapify (Arr, i, size) {
+    // 左节点（索引）
+    const l = i * 2 + 1;
+    // 右节点
+    const r = i * 2 + 2;
+    let largest = i;
+    // 父节点i和左节点l做比较取最大
+    if (l <= size && Arr[l] > Arr[largest]) largest = l;
+    // 右节点和最大值比较
+    if (r <= size && Arr[r] > Arr[largest]) largest = r;
+    if (largest !== i) {
+      MaxHeap.swap(Arr, i, largest)
+      MaxHeap.maxHeapify(Arr, largest, size)
+    }
+  }
+  find (val, i = 0) {
+    const arr = this.heap;
+    if (val > arr[i] || i > this.max) return false;
+    if (val === arr[i]) return val;
+    return this.find(val, i * 2 + 1) || this.find(val, i * 2 + 2);
+  }
+}
 
+function nthSuperUglyNumber(n: number, primes: number[]): number {
+  const ugly = new Ugly(n, primes);
+  return ugly.getNthUg();
+};
 ```
+
+- 使用堆结构，取代普通数组结构，让查找效率提升 O(n) => O(logn)
+- 但是这里仍有大量递归运算，消耗太多性能
+- 同样，在第77个case时出现了提示：超出时间限制
+
+3 ）使用动态规划
+
+```ts
+function nthSuperUglyNumber (n: number, primes: number[]) {
+    const dp = new Array(n + 1).fill(0);
+    const m = primes.length;
+    const pointers = new Array(m).fill(0);
+    const nums = new Array(m).fill(1);
+    for (let i = 1; i <= n; i++) {
+        let minNum = Number.MAX_SAFE_INTEGER;
+        for (let j = 0; j < m; j++) {
+            minNum = Math.min(minNum, nums[j]);
+        }
+        dp[i] = minNum;
+        for (let j = 0; j < m; j++) {
+            if (nums[j] == minNum) {
+                pointers[j]++;
+                nums[j] = dp[pointers[j]] * primes[j];
+            }
+        }
+    }
+    return dp[n];
+};
+```
+
+- 这是官方做法, 动态规划解决了递归的问题，由递归变成了递推
+- 时间复杂度 O(nm) ≈ O($n^2$)
