--- a/dsa/contents/119.md
+++ b/dsa/contents/119.md
@@ -33,7 +33,7 @@
 
 ### 深度优先遍历和广度优先遍历
 
-这里有一个图的示例
+这里有一个图的示例，对其进行深度和广度的优先遍历
 
 ```js
 // 邻接表表示法
@@ -51,12 +51,13 @@ const graph = {
 - 访问根节点
 - 对根节点的没访问过的相邻节点挨个进行深度优先遍历
     * 这里相邻节点和树中的children差不多，概念上相似
-    * 这里，没有访问过的节点(为了不重不漏)，如果不是这样，会陷入死循环
+    * 这里，没有访问过的节点(为了不重不漏)是一个重要的限制条件，如果不是这样，会陷入死循环
 
 ```js
 // 使用上面定义的通用graph变量
-let visited = new Set();
-let res = [];
+const visited = new Set();
+const res = [];
+// 深度优先遍历函数
 const dfs = (n) => {
      // console.log(n); // 访问当前节点
      res.push(n); // 访问过的节点存入结果队列中
@@ -83,13 +84,12 @@ console.log(res.toString()); // 2,0,1,3
 
 ```js
 // 使用上面定义的通用graph变量
-
-let res = []; // 用于存储最终的结果
-
+const res = []; // 用于存储最终的结果
+// 广度优先遍历函数
 const bfs = () => {
-    let visited = new Set();
+    const visited = new Set();
     visited.add(2); // 起始节点 注意这里结合下面的漏洞，先加入起始点
-    let q = [2]; // 起始节点
+    const q = [2]; // 起始节点
     while(q.length) {
         const n = q.shift(); // 队首出队
         // console.log(n); // 访问当前节点
